--- a/_congif.yml
+++ b/_congif.yml
@@ -1,2 +1,6 @@
-name: MediSane
-theme: minima
+remote_theme: pages-themes/minimal@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
+
+title: MediSane
+description: A COMP491 Project: MediSane the Medicine Tracker App
